- Added obstacles and dynamic destruction

--- a/space_invaders/space_invaders.vcxproj
+++ b/space_invaders/space_invaders.vcxproj
@@ -134,14 +134,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="block.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="laser.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="obstacle.cpp" />
     <ClCompile Include="spaceship.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="block.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="laser.h" />
+    <ClInclude Include="obstacle.h" />
     <ClInclude Include="spaceship.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
