--- a/space_invaders/space_invaders.vcxproj.filters
+++ b/space_invaders/space_invaders.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="obstacle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="alien.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="spaceship.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="obstacle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="alien.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
