- Added mystery ship

--- a/space_invaders/space_invaders.vcxproj
+++ b/space_invaders/space_invaders.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="laser.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mystery_ship.cpp" />
     <ClCompile Include="obstacle.cpp" />
     <ClCompile Include="spaceship.cpp" />
   </ItemGroup>
@@ -147,6 +148,7 @@
     <ClInclude Include="block.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="laser.h" />
+    <ClInclude Include="mystery_ship.h" />
     <ClInclude Include="obstacle.h" />
     <ClInclude Include="spaceship.h" />
   </ItemGroup>
