--- a/space_invaders/space_invaders.vcxproj.filters
+++ b/space_invaders/space_invaders.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="alien.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mystery_ship.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="spaceship.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="alien.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="mystery_ship.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
