--- a/space_invaders/space_invaders.vcxproj
+++ b/space_invaders/space_invaders.vcxproj
@@ -152,6 +152,9 @@
     <ClInclude Include="obstacle.h" />
     <ClInclude Include="spaceship.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="assets\ToDo.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
